@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563

hide empty methods
skinparam classAttributeIconSize 0
left to right direction
title CD-06 - Menu, Pricing và Recipe
caption Mô tả cấu trúc menu category, menu item, bảng giá và recipe line nối sang ingredient.
skinparam class {
  BackgroundColor white
  BorderColor #374151
  ArrowColor #4B5563
  HeaderBackgroundColor #E5EEF9
}

class "MenuCategory" as MenuCategory <<entity>> {
  {static} table = menu_categories
  --
  category_id
  name
  description
  sort_order
  is_deleted
}

class "MenuItem" as MenuItem <<entity>> {
  {static} table = menu_items
  --
  item_id
  category_id
  name
  created_at
  updated_at
  code
  description
}

class "MenuItemPrice" as MenuItemPrice <<entity>> {
  {static} table = menu_item_prices
  --
  price_id
  item_id
  price
  currency
  effective_from
  effective_to
}

class "MenuItemRecipe" as MenuItemRecipe <<entity>> {
  {static} table = menu_item_recipes
  --
  recipe_line_id
  item_id
  ingredient_id
  unit_code
  created_at
  updated_at
  quantity
}

class "Ingredient" as Ingredient <<entity>> {
  {static} table = ingredients
  --
  ingredient_id
  unit_code
  name
  created_at
  updated_at
  code
  description
}

class "MenuPreorderPolicyService" as MenuPreorderPolicyService <<control>> {
  orchestrates flow
}

class "ReservationPreorderService" as ReservationPreorderService <<control>> {
  orchestrates flow
}

MenuCategory "1" --> "0..*" MenuItem : items\nFK: category_id
MenuItem "1" --> "0..*" MenuItemPrice : prices\nFK: item_id
MenuItemRecipe "0..*" --> "1" MenuItem : item\nFK: item_id
Ingredient "1" --> "0..*" MenuItemRecipe : recipeLines\nFK: ingredient_id
MenuPreorderPolicyService ..> MenuCategory : uses
ReservationPreorderService ..> MenuCategory : uses
@enduml
